fix animatoin overlap with trade button

--- a/packages/frontend/app/components/Home/Hero/Hero.module.css
+++ b/packages/frontend/app/components/Home/Hero/Hero.module.css
@@ -37,6 +37,7 @@
     height: 100%;
     z-index: 0;
     pointer-events: none;
+    z-index: -1;
 }
 
 /* Primary animation layer */
